// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-media should delete a media item 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-media should handle non-existent media 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
